tests/models/enum/named/unit/fail/gt.stderr
error: Support condition is alias, default
 --> tests/models/enum/named/unit/fail/gt.rs:6:9
  |
6 |         value: ()
  |         ^^^^^
